Finished multi-head self-attention chapter

--- a/ch03/01_main-chapter-code/ch03.ipynb
+++ b/ch03/01_main-chapter-code/ch03.ipynb
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch version: 2.4.0\n"
+      "torch version: 2.3.0.post100\n"
      ]
     }
    ],
@@ -575,8 +575,8 @@
    "source": [
     "attn_scores = torch.empty(6, 6)\n",
     "\n",
-    "for i, x_i in enumerate(inputs):\n",
-    "    for j, x_j in enumerate(inputs):\n",
+    "for i, x_i in enumerate(inputs): # inputs.shape = (6, 3)\n",
+    "    for j, x_j in enumerate(inputs): # inputs.shape = (6, 3)\n",
     "        attn_scores[i, j] = torch.dot(x_i, x_j)\n",
     "\n",
     "print(attn_scores)"
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2cea69d0-9a47-45da-8d5a-47ceef2df673",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fa4ef062-de81-47ee-8415-bfe1708c81b8",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "112b492c-fb6f-4e6d-8df5-518ae83363d5",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ba8eafcf-f7f7-4989-b8dc-61b50c4f81dc",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2570eb7d-aee1-457a-a61e-7544478219fa",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8250fdc6-6cd6-4c5b-b9c0-8c643aadb7db",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "bfd7259a-f26c-4cea-b8fc-282b5cae1e00",
    "metadata": {},
    "outputs": [],
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "73cedd62-01e1-4196-a575-baecc6095601",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
+   "id": "c0fdfb51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([3]), torch.Size([3, 2]), torch.Size([2]))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_2.shape, W_query.shape, query_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "8c1c3949-fc08-4d19-a41e-1c235b4e631b",
    "metadata": {},
    "outputs": [
@@ -924,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "64cbc253-a182-4490-a765-246979ea0a28",
    "metadata": {},
    "outputs": [
@@ -952,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "b14e44b5-d170-40f9-8847-8990804af26d",
    "metadata": {},
    "outputs": [
@@ -988,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "146f5587-c845-4e30-9894-c7ed3a248153",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "e138f033-fa7e-4e3a-8764-b53a96b26397",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "51590326-cdbe-4e62-93b1-17df71c11ee4",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "73f411e3-e231-464a-89fe-0a9035e5f839",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "1933940d-0fa5-4b17-a3ce-388e5314a1bb",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "43f3d2e3-185b-4184-9f98-edde5e6df746",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "9f531e2e-f4d2-4fea-a87f-4c132e48b9e7",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "6d392083-fd81-4f70-9bdf-8db985e673d6",
    "metadata": {},
    "outputs": [
@@ -1393,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "a2be2f43-9cf0-44f6-8d8b-68ef2fb3cc39",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "b1cd6d7f-16f2-43c1-915e-0824f1a4bc52",
    "metadata": {},
    "outputs": [
@@ -1491,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "0de578db-8289-41d6-b377-ef645751e33f",
    "metadata": {},
    "outputs": [
@@ -1518,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "b16c5edb-942b-458c-8e95-25e4e355381e",
    "metadata": {},
    "outputs": [
@@ -1569,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "977a5fa7-a9d5-4e2e-8a32-8e0331ccfe28",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "60d8c2eb-2d8e-4d2c-99bc-9eef8cc53ca0",
    "metadata": {},
    "outputs": [
@@ -1710,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "b9a66e11-7105-4bb4-be84-041f1a1f3bd2",
    "metadata": {},
    "outputs": [
@@ -1788,6 +1809,137 @@
     "\n",
     "- We don't concatenate single attention heads for this stand-alone `MultiHeadAttention` class\n",
     "- Instead, we create single W_query, W_key, and W_value weight matrices and then split those into individual matrices for each attention head:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c90ee9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.3190, 0.4858],\n",
+      "         [0.2943, 0.3897],\n",
+      "         [0.2856, 0.3593],\n",
+      "         [0.2693, 0.3873],\n",
+      "         [0.2639, 0.3928],\n",
+      "         [0.2575, 0.4028]],\n",
+      "\n",
+      "        [[0.3190, 0.4858],\n",
+      "         [0.2943, 0.3897],\n",
+      "         [0.2856, 0.3593],\n",
+      "         [0.2693, 0.3873],\n",
+      "         [0.2639, 0.3928],\n",
+      "         [0.2575, 0.4028]]], grad_fn=<ViewBackward0>)\n",
+      "context_vecs.shape: torch.Size([2, 6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        assert (d_out % num_heads == 0), \\\n",
+    "            \"d_out must be divisible by num_heads\"\n",
+    "\n",
+    "        self.d_out = d_out\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = d_out // num_heads # Reduce the projection dim to match desired output dim\n",
+    "\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.out_proj = nn.Linear(d_out, d_out)  # Linear layer to combine head outputs\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.register_buffer(\n",
+    "            \"mask\",\n",
+    "            torch.triu(torch.ones(context_length, context_length),\n",
+    "                       diagonal=1)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "        # As in `CausalAttention`, for inputs where `num_tokens` exceeds `context_length`, \n",
+    "        # this will result in errors in the mask creation further below. \n",
+    "        # In practice, this is not a problem since the LLM (chapters 4-7) ensures that inputs  \n",
+    "        # do not exceed `context_length` before reaching this forwar\n",
+    "\n",
+    "        keys = self.W_key(x) # Shape: (b, num_tokens, d_out)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "\n",
+    "        # We implicitly split the matrix by adding a `num_heads` dimension\n",
+    "        # Unroll last dim: (b, num_tokens, d_out) -> (b, num_tokens, num_heads, head_dim)\n",
+    "        keys = keys.view(b, num_tokens, self.num_heads, self.head_dim) \n",
+    "        values = values.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        queries = queries.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "\n",
+    "        # Transpose: (b, num_tokens, num_heads, head_dim) -> (b, num_heads, num_tokens, head_dim)\n",
+    "        keys = keys.transpose(1, 2)\n",
+    "        queries = queries.transpose(1, 2)\n",
+    "        values = values.transpose(1, 2)\n",
+    "\n",
+    "        # Compute scaled dot-product attention (aka self-attention) with a causal mask\n",
+    "        attn_scores = queries @ keys.transpose(2, 3)  # Dot product for each head\n",
+    "\n",
+    "        # Original mask truncated to the number of tokens and converted to boolean\n",
+    "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens]\n",
+    "\n",
+    "        # Use the mask to fill attention scores\n",
+    "        attn_scores.masked_fill_(mask_bool, -torch.inf)\n",
+    "        \n",
+    "        attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        # Shape: (b, num_tokens, num_heads, head_dim)\n",
+    "        context_vec = (attn_weights @ values).transpose(1, 2) \n",
+    "        \n",
+    "        # Combine heads, where self.d_out = self.num_heads * self.head_dim\n",
+    "        context_vec = context_vec.contiguous().view(b, num_tokens, self.d_out)\n",
+    "        context_vec = self.out_proj(context_vec) # optional projection\n",
+    "\n",
+    "        return context_vec\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "\n",
+    "batch_size, context_length, d_in = batch.shape\n",
+    "d_out = 2\n",
+    "mha = MultiHeadAttention(d_in, d_out, context_length, 0.0, num_heads=2)\n",
+    "\n",
+    "context_vecs = mha(batch)\n",
+    "\n",
+    "print(context_vecs)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "164315d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 1., 1., 1., 1., 1.],\n",
+       "        [0., 0., 1., 1., 1., 1.],\n",
+       "        [0., 0., 0., 1., 1., 1.],\n",
+       "        [0., 0., 0., 0., 1., 1.],\n",
+       "        [0., 0., 0., 0., 0., 1.],\n",
+       "        [0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.triu(torch.ones(context_length, context_length),\n",
+    "                       diagonal=1)"
    ]
   },
   {
@@ -2023,7 +2175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2037,7 +2189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
